--- a/assets/sass/_01-MAIN-STYLES.scss
+++ b/assets/sass/_01-MAIN-STYLES.scss
@@ -135,7 +135,7 @@ table{text-align:left; width:100%;
 \***************/
 
 a.external-link {
-	@include M-icon($icon-external,14px,$pos:after){
+	@include M-icon(external,14px,$pos:after){
 		color: #1C4B92;
 		margin-left: 5px;
 	}
@@ -143,14 +143,14 @@ a.external-link {
 
 //FORMAT: M-download_icons($icon,$color,$lighten:40%,$desaturation:0%);
 //mixin found in _project-specific.scss
-#{files_link(pdf)} { @include M-download_icons($icon-pdf,#b9282b); }
-#{files_link((doc, docx))} { @include M-download_icons($icon-word,#3617B4); }
-#{files_link((xls, xlsx))} { @include M-download_icons($icon-excel,#065B0E,50%,50%); }
-#{files_link((ppt, pptx))} { @include M-download_icons($icon-powerpoint,#E65A15,30%); }
-#{files_link(txt)} { @include M-download_icons($icon-text,#7B7B7B,30%); }
-#{files_link(mp3)} { @include M-download_icons($icon-audio,#680E7F,50%); }
-a[href*="itunes"] { @include M-download_icons($icon-podcast,#107A8F,$desaturation:20%); }
-a.htmlDownload { @include M-download_icons($icon-globe,#4469CE,30%); }
+#{files_link(pdf)} { @include M-download_icons(pdf,#b9282b); }
+#{files_link((doc, docx))} { @include M-download_icons(word,#3617B4); }
+#{files_link((xls, xlsx))} { @include M-download_icons(excel,#065B0E,50%,50%); }
+#{files_link((ppt, pptx))} { @include M-download_icons(powerpoint,#E65A15,30%); }
+#{files_link(txt)} { @include M-download_icons(text,#7B7B7B,30%); }
+#{files_link(mp3)} { @include M-download_icons(audio,#680E7F,50%); }
+a[href*="itunes"] { @include M-download_icons(podcast,#107A8F,$desaturation:20%); }
+a.htmlDownload { @include M-download_icons(globe,#4469CE,30%); }
 
 
 /***********************\
@@ -259,7 +259,7 @@ select option { font-weight: 100; }
 	}
 
 	//adding triangle with icon instead
-	/*@include M-icon($icon-arrow-down, 5px){
+	/*@include M-icon(arrow-down, 5px){
 		color: #000;
 		z-index: 0;
 		@include M-centered(v);
